--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+= 2.1.8 =
+
+* Update: Resolve an issue with the latest version of WordPress tax queries.
+
 = 2.1.7 =
 
 * Update: Collision prevention
